--- a/card.html
+++ b/card.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MyGift</title>
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+
   <link rel="icon" href="./img/favicon.svg" type="image/svg+xml">
+
+  <script src="js/scriptCard.js" defer></script>
 </head>
 
 <body class="body body--congratulation">
@@ -15,7 +21,39 @@
     </div>
   </header>
 
-  <section class="congratulation"></section>
+  <main class="main-content">
+    <section class="congratulation">
+
+      <div class="container">
+        <h1 class="congratulation__title">Вам открытка!</h1>
+        <p class="congratulation__description">Нажмите на нее, чтобы узнать от кого она и прочитать поздравление</p>
+        <div class="congratulation__card card">
+          <div class="card__inner">
+            <div class="card__front">
+              <img class="card__image" src="img/card_03.jpg" alt="Открытка №3">
+            </div>
+            <div class="card__back">
+              <h2 class="card__title">Поздравление</h2>
+              <div class="card__contacts">
+                <p class="card__detail">
+                  <span class="card__subtitle">от кого</span>
+                  <span class="card__from">Иван Иванов</span>
+                </p>  
+                <p class="card__detail">
+                  <span class="card__subtitle">кому</span>
+                  <span class="card__to">Татьяна Айкина</span>
+                </p>               
+              </div>
+              <p class="card__message">
+                Желаю Счастливого Нового года и Рождества! Будьте здоровы и радостны!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+  </main>
 
 </body>
 
