--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>MyGift</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
+  <script src="https://unpkg.com/imask" defer></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js" defer></script>
+  <script src="js/script.js" defer></script>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
@@ -22,23 +25,23 @@
   <main class="main-content">
     <section class="gift">
       <div class="container">
-        <h1 class="gift__title">Поздравьте близкого человека с праздником!</h1>
+        <h1 class="gift__title">Поздравьте близкого человека с&nbsp;праздником!</h1>
         <p class="gift__description">Выберите открытку и получатель получит ее на свой телефон</p>
         <div class="gift__wrapper">
           <div class="gift__card">
             <div class="swiper gift__swiper gift__swiper--card">
               <div class="swiper-wrapper">
                 <div class="swiper-slide gift__card-slide">
-                  <img class="gift__card-image" src="img/card_01.jpg" alt="Открытка №1">
+                  <img class="gift__card-image" src="img/card_01.jpg" data-card="card_01" alt="Открытка №1">
                 </div>
                 <div class="swiper-slide gift__card-slide">
-                  <img class="gift__card-image" src="img/card_02.jpg" alt="Открытка №2">
+                  <img class="gift__card-image" src="img/card_02.jpg" data-card="card_02" alt="Открытка №2">
                 </div>
                 <div class="swiper-slide gift__card-slide">
-                  <img class="gift__card-image" src="img/card_03.jpg" alt="Открытка №3">
+                  <img class="gift__card-image" src="img/card_03.jpg" data-card="card_03" alt="Открытка №3">
                 </div>
                 <div class="swiper-slide gift__card-slide">
-                  <img class="gift__card-image" src="img/card_04.jpg" alt="Открытка №4">
+                  <img class="gift__card-image" src="img/card_04.jpg" data-card="card_04" alt="Открытка №4">
                 </div>
               </div>
             </div>
@@ -69,7 +72,7 @@
 
             <label class="form__label">
               <span class="form__label-text">телефон отправителя</span>
-              <input class="form__field" type="text" name="sender_phone">
+              <input class="form__field form__field--phone" type="text" name="sender_phone">
             </label>
             
             <label class="form__label">
@@ -79,14 +82,14 @@
             
             <label class="form__label">
               <span class="form__label-text">телефон получателя</span>
-              <input class="form__field" type="text" name="receiver_phone">
+              <input class="form__field form__field--phone" type="text" name="receiver_phone">
             </label>
 
             <label class="form__label form__label--textarea">
               <span class="form__label-text">поздравительный текст</span>
               <textarea class="form__field form__field--textarea" name="message" placeholder="Напишите теплые слова"></textarea>
             </label>
-
+            <input class="form__card" type="hidden" name="card">
             <button class="form__button" type="submit" disabled>Отправить</button>
           </form>
         </div>
